--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/0.3c49b224.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.90a557c4.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.af675da9.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a6565ffd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.045dbaf6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.00e67d7c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c0e638e8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.db866d63.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.a5328731.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.102ad031.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.545aa516.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5ed8e26f.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e6a46d4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.74b2a0db.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.5b5352c9.js"><title>Home</title><!-- HEAD_svelte-5ssqet_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-5ssqet_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -98,7 +98,7 @@
 			
 			<script>
 				{
-					__sveltekit_1d2mhve = {
+					__sveltekit_rn7cr = {
 						assets: "/itemBoardSvelte",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -109,8 +109,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a6565ffd.js"),
-						import("./_app/immutable/entry/app.db866d63.js")
+						import("./_app/immutable/entry/start.045dbaf6.js"),
+						import("./_app/immutable/entry/app.5ed8e26f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
